# mapid

./: .env.example  CLAUDE.md  IMAGE_UPLOAD_IMPLEMENTATION.md  Product.md  README.md  app.py  mapid.sh  pyproject.toml  test_image_upload.py
app/: __init__.py  config.py  extensions.py
app/cli/: db.py
app/forms/: __init__.py  posts.py
app/models/: __init__.py  base.py  category.py  post.py  post_image.py  user.py
app/routes/: auth.py  main.py  maps.py  posts.py
app/routes/api/: __init__.py  images.py
app/routes/api/v1/: __init__.py
app/services/: location.py  moderation.py  oauth.py  post_service.py  s3_upload.py
app/templates/: about.html  base.html  index.html
app/templates/auth/: login.html  profile.html
app/templates/maps/: map_view.html
app/templates/posts/: create_form.html  create_select.html  detail.html  list.html
migrations/versions/: 21e80d7c2588_initial_migration_with_postgis_support.py
tasks/: TASK_LIST.md  prd-mapid-mvp.md
